--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "LUCAS Agent",
   "short_name": "LUCAS",
   "description": "Gana USDT verificando el mundo real",
-  "start_url": "/lucas-pwa/",
-  "scope": "/lucas-pwa/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#050505",
   "theme_color": "#050505",
