--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "LUCAS Agent",
+  "name": "LUCAS Inspector",
   "short_name": "LUCAS",
-  "description": "Gana USDT verificando el mundo real",
-  "start_url": "/",
-  "scope": "/",
+  "description": "Property verification app for LUCAS inspectors",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#050505",
   "theme_color": "#050505",
@@ -13,28 +12,16 @@
       "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icon-maskable-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "icon-maskable-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
-  "categories": ["business", "finance"],
-  "lang": "es",
+  "categories": ["business", "utilities"],
+  "lang": "en",
   "dir": "ltr"
 }
